# pplx_api

./: Cargo.toml  README.md  README_KO.md
src/: client.rs  error.rs  lib.rs
src/models/: config.rs  mod.rs  role.rs
src/types/: message.rs  mod.rs  request.rs  response.rs
